Issue#142(Content get cut-short on small tablets) resolved

--- a/app/MyApp/app/Home-Urdu.css
+++ b/app/MyApp/app/Home-Urdu.css
@@ -406,11 +406,9 @@ body{
 #resourceform {
     background-color: #F3F3F3;
     border-radius: 37px;
-    margin-bottom: -1%;
-    margin-left: -1%;
     width: 883px;
-    margin-right:25%;
     float:right;
+    direction: rtl;
 }
 
 
